<resources>
    <string name="app_name">ViewPager2</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="user">User</string>
    <string name="group">Group</string>
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="title_profile" />
    <string name="add">ADD</string>
    <string name="addition">Add</string>
    <string name="main_list">Main list</string>
    <string name="weather">Weather</string>
    <string name="time">Time</string>
    <string name="kyrgyzland">Kyrgyzland</string>
    <string name="bishkek">Bishkek</string>
    <string name="humid">humid</string>
    <string name="barometer">barometer</string>
    <string name="wind">wind</string>
    <string name="users">Users</string>
    <string name="put_user">Put user</string>
    <string name="exit">Exit</string>
    <string name="remove">Remove</string>
    <string name="list_main">Main list</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_size">20dp</string>
</resources>