<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:padding="10dp"
    tools:context=".ui.fragments.WeatherFragment">

    <TextView
        android:id="@+id/city"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/bishkek"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:gravity="center"
        android:text="@string/kyrgyzland"
        android:textSize="20sp" />

    <TextClock
        android:id="@+id/time"
        style="@style/txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:format12Hour="h:mm"
        android:text="@string/time"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/weather_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:src="@drawable/sunny" />

    <TextView
        android:id="@+id/temprerare"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_conditions"
        android:gravity="center"
        android:text="18ºC" />

    <LinearLayout
        android:id="@+id/forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temprerare"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/humidity" />

            <TextView
                android:id="@+id/txt_humidity"
                style="@style/txt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/humid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_barometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/barometer" />

            <TextView
                android:id="@+id/txt_barometer"
                style="@style/txt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/barometer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/txt_wind"
                style="@style/txt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wind" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>